configuration with levelDB store