@@ -38,10 +38,10 @@
             <artifactId>jdg-quickstarts-playground</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
         <dependency>
             <groupId>org.infinispan</groupId>
             <artifactId>infinispan-core</artifactId>
-            <scope>compile</scope>
         </dependency>
 
         <!--TEST-->
@@ -119,6 +119,56 @@
                                         <argument>-XX:NewRatio=3</argument>
                                         <argument>-XX:+UseConcMarkSweepGC</argument>
                                         <argument>-XX:+UseParNewGC</argument>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>it.redhat.playground.PerfTestMain</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <properties>
+                <playground.levelDB.location>${project.build.directory}/location</playground.levelDB.location>
+                <playground.levelDB.expired>${project.build.directory}/expired</playground.levelDB.expired>
+                <playground.cacheMode>DIST_SYNC</playground.cacheMode>
+                <playground.numOwners>2</playground.numOwners>
+            </properties>
+
+            <id>perf-test-store</id>
+            <build>
+                <defaultGoal>install</defaultGoal>
+
+
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.2.1</version>
+                        <executions>
+                            <execution>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>java</executable>
+                                    <arguments>
+                                        <argument>-server</argument>
+                                        <argument>-Xms4096m</argument>
+                                        <argument>-Xmx4096m</argument>
+                                        <argument>-XX:MaxPermSize=512m</argument>
+                                        <argument>-XX:NewRatio=3</argument>
+                                        <argument>-XX:+UseConcMarkSweepGC</argument>
+                                        <argument>-XX:+UseParNewGC</argument>
+                                        <argument>-Dplayground.levelDB.location=${playground.levelDB.location}</argument>
+                                        <argument>-Dplayground.levelDB.expired=${playground.levelDB.expired}</argument>
+                                        <argument>-Dplayground.cacheMode=${playground.cacheMode}</argument>
+                                        <argument>-Dplayground.numOwners=${playground.numOwners}</argument>
                                         <argument>-classpath</argument>
                                         <classpath/>
                                         <argument>it.redhat.playground.PerfTestMain</argument>
